--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nuu.cloudinteractive">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Cloudinteractive林宜得">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Cloudinteractive林宜德">
+        <activity android:name=".ThumbnailDetailActivity"></activity>
+        <activity android:name=".ThumbnailInfoActivity" />
+        <activity android:name=".ThumbnailActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
